# secure-pg-query

./: .gitignore  LICENSE  README.md  connections.example.json  pyproject.toml
skill/: SKILL.md
src/secure_pg_query/: __init__.py  cli.py  config.py  db.py  validate.py
tests/: test_validate.py
